sdk-docs_versioned_docs/version-23.2.x/modules/API/Entities/Types/Types.md
---
id: "Types"
title: "Module: Entities Types"
sidebar_label: "Types"
---

## References

### AffirmationStatus

Re-exports [AffirmationStatus](../../../../enums/API/Entities/Instruction/Types/AffirmationStatus/AffirmationStatus.md)

___

### AgentWithGroup

Re-exports [AgentWithGroup](../../../../interfaces/API/Entities/Asset/Types/AgentWithGroup/AgentWithGroup.md)

___

### Asset

Re-exports [Asset](../Asset/Types/Types.md#asset)

___

### AssetDetails

Re-exports [AssetDetails](../../../../interfaces/API/Entities/Asset/Types/AssetDetails/AssetDetails.md)

___

### CaCheckpointType

Re-exports [CaCheckpointType](../../../../enums/API/Entities/Asset/Fungible/Checkpoints/Types/CaCheckpointType/CaCheckpointType.md)

___

### CheckpointScheduleParams

Re-exports [CheckpointScheduleParams](../CheckpointSchedule/Types/Types.md#checkpointscheduleparams)

___

### CollectionKey

Re-exports [CollectionKey](../Asset/Types/Types.md#collectionkey)

___

### CorporateActionDefaultConfig

Re-exports [CorporateActionDefaultConfig](../../../../interfaces/API/Entities/Asset/Fungible/CorporateActions/Types/CorporateActionDefaultConfig/CorporateActionDefaultConfig.md)

___

### CorporateActionKind

Re-exports [CorporateActionKind](../../../../enums/API/Entities/CorporateActionBase/Types/CorporateActionKind/CorporateActionKind.md)

___

### CorporateActionParams

Renames and re-exports [Params](../../../../interfaces/API/Entities/CorporateActionBase/Params/Params.md)

___

### CorporateActionTargets

Re-exports [CorporateActionTargets](../../../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md)

___

### DistributionParticipant

Re-exports [DistributionParticipant](../../../../interfaces/API/Entities/DividendDistribution/Types/DistributionParticipant/DistributionParticipant.md)

___

### DividendDistributionDetails

Re-exports [DividendDistributionDetails](../../../../interfaces/API/Entities/DividendDistribution/Types/DividendDistributionDetails/DividendDistributionDetails.md)

___

### DividendDistributionParams

Re-exports [DividendDistributionParams](../../../../interfaces/API/Entities/DividendDistribution/DividendDistributionParams/DividendDistributionParams.md)

___

### FungibleLeg

Re-exports [FungibleLeg](../../../../interfaces/API/Entities/Instruction/Types/FungibleLeg/FungibleLeg.md)

___

### GlobalMetadataKey

Re-exports [GlobalMetadataKey](../MetadataEntry/Types/Types.md#globalmetadatakey)

___

### HistoricAssetTransaction

Re-exports [HistoricAssetTransaction](../../../../interfaces/API/Entities/Asset/Types/HistoricAssetTransaction/HistoricAssetTransaction.md)

___

### HistoricInstruction

Re-exports [HistoricInstruction](../Venue/Types/Types.md#historicinstruction)

___

### HistoricSettlement

Re-exports [HistoricSettlement](../../../../interfaces/API/Entities/Portfolio/Types/HistoricSettlement/HistoricSettlement.md)

___

### IdentityBalance

Re-exports [IdentityBalance](../../../../interfaces/API/Entities/Asset/Types/IdentityBalance/IdentityBalance.md)

___

### InputCaCheckpoint

Re-exports [InputCaCheckpoint](../Asset/Fungible/Checkpoints/Types/Types.md#inputcacheckpoint)

___

### InputTargets

Re-exports [InputTargets](../CorporateActionBase/Types/Types.md#inputtargets)

___

### InputTaxWithholding

Re-exports [InputTaxWithholding](../CorporateActionBase/Types/Types.md#inputtaxwithholding)

___

### InstructionAffirmation

Re-exports [InstructionAffirmation](../../../../interfaces/API/Entities/Instruction/Types/InstructionAffirmation/InstructionAffirmation.md)

___

### InstructionDetails

Re-exports [InstructionDetails](../Instruction/Types/Types.md#instructiondetails)

___

### InstructionEndCondition

Re-exports [InstructionEndCondition](../Instruction/Types/Types.md#instructionendcondition)

___

### InstructionStatus

Re-exports [InstructionStatus](../../../../enums/API/Entities/Instruction/Types/InstructionStatus/InstructionStatus.md)

___

### InstructionStatusResult

Re-exports [InstructionStatusResult](../Instruction/Types/Types.md#instructionstatusresult)

___

### InstructionType

Re-exports [InstructionType](../../../../enums/API/Entities/Instruction/Types/InstructionType/InstructionType.md)

___

### Investment

Re-exports [Investment](../../../../interfaces/API/Entities/Offering/Types/Investment/Investment.md)

___

### Leg

Re-exports [Leg](../Instruction/Types/Types.md#leg)

___

### MetadataDetails

Re-exports [MetadataDetails](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataDetails/MetadataDetails.md)

___

### MetadataKeyId

Re-exports [MetadataKeyId](../Asset/Types/Types.md#metadatakeyid)

___

### MetadataLockStatus

Re-exports [MetadataLockStatus](../../../../enums/API/Entities/MetadataEntry/Types/MetadataLockStatus/MetadataLockStatus.md)

___

### MetadataSpec

Re-exports [MetadataSpec](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md)

___

### MetadataType

Re-exports [MetadataType](../../../../enums/API/Entities/MetadataEntry/Types/MetadataType/MetadataType.md)

___

### MetadataValue

Re-exports [MetadataValue](../MetadataEntry/Types/Types.md#metadatavalue)

___

### MetadataValueDetails

Re-exports [MetadataValueDetails](../MetadataEntry/Types/Types.md#metadatavaluedetails)

___

### MultiSigDetails

Re-exports [MultiSigDetails](../../../../interfaces/API/Entities/Account/MultiSig/Types/MultiSigDetails/MultiSigDetails.md)

___

### MultiSigProposalAction

Re-exports [MultiSigProposalAction](../../../../enums/API/Entities/MultiSigProposal/Types/MultiSigProposalAction/MultiSigProposalAction.md)

___

### MultiSigProposalDetails

Re-exports [MultiSigProposalDetails](../../../../interfaces/API/Entities/MultiSigProposal/Types/MultiSigProposalDetails/MultiSigProposalDetails.md)

___

### MultiSigProposalVote

Re-exports [MultiSigProposalVote](../MultiSigProposal/Types/Types.md#multisigproposalvote)

___

### NftLeg

Re-exports [NftLeg](../../../../interfaces/API/Entities/Instruction/Types/NftLeg/NftLeg.md)

___

### NftMetadata

Re-exports [NftMetadata](../../../../interfaces/API/Entities/Asset/Types/NftMetadata/NftMetadata.md)

___

### OfferingBalanceStatus

Re-exports [OfferingBalanceStatus](../../../../enums/API/Entities/Offering/Types/OfferingBalanceStatus/OfferingBalanceStatus.md)

___

### OfferingDetails

Re-exports [OfferingDetails](../../../../interfaces/API/Entities/Offering/Types/OfferingDetails/OfferingDetails.md)

___

### OfferingSaleStatus

Re-exports [OfferingSaleStatus](../../../../enums/API/Entities/Offering/Types/OfferingSaleStatus/OfferingSaleStatus.md)

___

### OfferingStatus

Re-exports [OfferingStatus](../../../../interfaces/API/Entities/Offering/Types/OfferingStatus/OfferingStatus.md)

___

### OfferingTier

Re-exports [OfferingTier](../../../../interfaces/API/Entities/Offering/Types/OfferingTier/OfferingTier.md)

___

### OfferingTimingStatus

Re-exports [OfferingTimingStatus](../../../../enums/API/Entities/Offering/Types/OfferingTimingStatus/OfferingTimingStatus.md)

___

### PortfolioBalance

Re-exports [PortfolioBalance](../../../../interfaces/API/Entities/Portfolio/Types/PortfolioBalance/PortfolioBalance.md)

___

### PortfolioCollection

Re-exports [PortfolioCollection](../../../../interfaces/API/Entities/Portfolio/Types/PortfolioCollection/PortfolioCollection.md)

___

### ProposalStatus

Re-exports [ProposalStatus](../../../../enums/API/Entities/MultiSigProposal/Types/ProposalStatus/ProposalStatus.md)

___

### ScheduleDetails

Re-exports [ScheduleDetails](../../../../interfaces/API/Entities/CheckpointSchedule/Types/ScheduleDetails/ScheduleDetails.md)

___

### SettlementLeg

Re-exports [SettlementLeg](../Portfolio/Types/Types.md#settlementleg)

___

### SubsidyData

Re-exports [SubsidyData](../../../../interfaces/API/Entities/Subsidy/Types/SubsidyData/SubsidyData.md)

___

### SubsidyWithAllowance

Re-exports [SubsidyWithAllowance](../../../../interfaces/API/Entities/Subsidy/Types/SubsidyWithAllowance/SubsidyWithAllowance.md)

___

### TargetTreatment

Re-exports [TargetTreatment](../../../../enums/API/Entities/CorporateActionBase/Types/TargetTreatment/TargetTreatment.md)

___

### TaxWithholding

Re-exports [TaxWithholding](../../../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md)

___

### TickerReservationDetails

Re-exports [TickerReservationDetails](../../../../interfaces/API/Entities/TickerReservation/Types/TickerReservationDetails/TickerReservationDetails.md)

___

### TickerReservationStatus

Re-exports [TickerReservationStatus](../../../../enums/API/Entities/TickerReservation/Types/TickerReservationStatus/TickerReservationStatus.md)

___

### Tier

Re-exports [Tier](../../../../interfaces/API/Entities/Offering/Types/Tier/Tier.md)

___

### TransferBreakdown

Re-exports [TransferBreakdown](../../../../interfaces/API/Entities/Asset/Types/TransferBreakdown/TransferBreakdown.md)

___

### TransferRestrictionResult

Re-exports [TransferRestrictionResult](../../../../interfaces/API/Entities/Asset/Types/TransferRestrictionResult/TransferRestrictionResult.md)

___

### UniqueIdentifiers

Re-exports [UniqueIdentifiers](../../../../interfaces/API/Entities/Asset/Types/UniqueIdentifiers/UniqueIdentifiers.md)

___

### VenueDetails

Re-exports [VenueDetails](../../../../interfaces/API/Entities/Venue/Types/VenueDetails/VenueDetails.md)

___

### VenueType

Re-exports [VenueType](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)

## Type Aliases

### Account

Ƭ **Account**: [`Account`](../../../../classes/API/Entities/Account/Account.md)

#### Defined in

[api/entities/types.ts:27](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L27)

___

### AuthorizationRequest

Ƭ **AuthorizationRequest**: [`AuthorizationRequest`](../../../../classes/API/Entities/AuthorizationRequest/AuthorizationRequest.md)

#### Defined in

[api/entities/types.ts:29](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L29)

___

### Checkpoint

Ƭ **Checkpoint**: [`Checkpoint`](../../../../classes/API/Entities/Checkpoint/Checkpoint.md)

#### Defined in

[api/entities/types.ts:30](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L30)

___

### CheckpointSchedule

Ƭ **CheckpointSchedule**: [`CheckpointSchedule`](../../../../classes/API/Entities/CheckpointSchedule/CheckpointSchedule.md)

#### Defined in

[api/entities/types.ts:31](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L31)

___

### ChildIdentity

Ƭ **ChildIdentity**: [`ChildIdentity`](../../../../classes/API/Entities/Identity/ChildIdentity/ChildIdentity.md)

#### Defined in

[api/entities/types.ts:38](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L38)

___

### CorporateAction

Ƭ **CorporateAction**: [`CorporateAction`](../../../../classes/API/Entities/CorporateAction/CorporateAction.md)

#### Defined in

[api/entities/types.ts:32](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L32)

___

### CustomPermissionGroup

Ƭ **CustomPermissionGroup**: [`CustomPermissionGroup`](../../../../classes/API/Entities/CustomPermissionGroup/CustomPermissionGroup.md)

#### Defined in

[api/entities/types.ts:33](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L33)

___

### DefaultPortfolio

Ƭ **DefaultPortfolio**: [`DefaultPortfolio`](../../../../classes/API/Entities/DefaultPortfolio/DefaultPortfolio.md)

#### Defined in

[api/entities/types.ts:34](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L34)

___

### DefaultTrustedClaimIssuer

Ƭ **DefaultTrustedClaimIssuer**: [`DefaultTrustedClaimIssuer`](../../../../classes/API/Entities/DefaultTrustedClaimIssuer/DefaultTrustedClaimIssuer.md)

#### Defined in

[api/entities/types.ts:35](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L35)

___

### DividendDistribution

Ƭ **DividendDistribution**: [`DividendDistribution`](../../../../classes/API/Entities/DividendDistribution/DividendDistribution.md)

#### Defined in

[api/entities/types.ts:36](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L36)

___

### FungibleAsset

Ƭ **FungibleAsset**: [`FungibleAsset`](../../../../classes/API/Entities/Asset/Fungible/FungibleAsset.md)

#### Defined in

[api/entities/types.ts:42](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L42)

___

### Identity

Ƭ **Identity**: [`Identity`](../../../../classes/API/Entities/Identity/Identity.md)

#### Defined in

[api/entities/types.ts:37](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L37)

___

### Instruction

Ƭ **Instruction**: [`Instruction`](../../../../classes/API/Entities/Instruction/Instruction.md)

#### Defined in

[api/entities/types.ts:39](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L39)

___

### KnownPermissionGroup

Ƭ **KnownPermissionGroup**: [`KnownPermissionGroup`](../../../../classes/API/Entities/KnownPermissionGroup/KnownPermissionGroup.md)

#### Defined in

[api/entities/types.ts:40](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L40)

___

### MetadataEntry

Ƭ **MetadataEntry**: [`MetadataEntry`](../../../../classes/API/Entities/MetadataEntry/MetadataEntry.md)

#### Defined in

[api/entities/types.ts:45](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L45)

___

### MultiSig

Ƭ **MultiSig**: [`MultiSig`](../../../../classes/API/Entities/Account/MultiSig/MultiSig.md)

#### Defined in

[api/entities/types.ts:28](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L28)

___

### Nft

Ƭ **Nft**: [`Nft`](../../../../classes/API/Entities/Asset/NonFungible/Nft/Nft.md)

#### Defined in

[api/entities/types.ts:43](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L43)

___

### NftCollection

Ƭ **NftCollection**: [`NftCollection`](../../../../classes/API/Entities/Asset/NonFungible/NftCollection/NftCollection.md)

#### Defined in

[api/entities/types.ts:44](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L44)

___

### NumberedPortfolio

Ƭ **NumberedPortfolio**: [`NumberedPortfolio`](../../../../classes/API/Entities/NumberedPortfolio/NumberedPortfolio.md)

#### Defined in

[api/entities/types.ts:41](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L41)

___

### Offering

Ƭ **Offering**: [`Offering`](../../../../classes/API/Entities/Offering/Offering.md)

#### Defined in

[api/entities/types.ts:46](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L46)

___

### Subsidy

Ƭ **Subsidy**: [`Subsidy`](../../../../classes/API/Entities/Subsidy/Subsidy.md)

#### Defined in

[api/entities/types.ts:49](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L49)

___

### TickerReservation

Ƭ **TickerReservation**: [`TickerReservation`](../../../../classes/API/Entities/TickerReservation/TickerReservation.md)

#### Defined in

[api/entities/types.ts:47](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L47)

___

### Venue

Ƭ **Venue**: [`Venue`](../../../../classes/API/Entities/Venue/Venue.md)

#### Defined in

[api/entities/types.ts:48](https://github.com/PolymeshAssociation/polymesh-sdk/blob/daafaa68f/src/api/entities/types.ts#L48)
